# qreverse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  qreverse.hpp
images/: Comp.aep
include/: qreverse.hpp
media/: CompGen.jsx
scripts/: CompGen.jsx
tests/: benchmark.cpp  verify.cpp
